# blixt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
app/: package-lock.json  package.json
app/src/: index.html  main.js  settings.html  settings.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: tray-mic.html
app/src-tauri/src/: audio.rs  main.rs  modes.rs  paste.rs  provider.rs  settings.rs
docs/: OFFLINE-SETUP.md  hero.html
