[package]
name = "blixt"
version = "0.1.0"
description = "Blixt - Sprache zu Text fuer Windows"
authors = ["Blixt"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

cpal = "0.15"
hound = "3"
reqwest = { version = "0.12", features = ["multipart", "json"] }
# WICHTIG: keyring v3 hat KEINE Default-Features. Ohne "windows-native" nutzt es einen
# Mock-Speicher OHNE Persistenz -> set_password meldet ok, get_password findet aber nichts.
keyring = { version = "3", features = ["windows-native"] }

# Auto-Einfuegen am Cursor: nur unter Windows (enigo = Tastatur, windows = Fenster-Fokus).
[target.'cfg(windows)'.dependencies]
enigo = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
